--- a/css/login.css
+++ b/css/login.css
@@ -1,4 +1,4 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&family=Poppins:wght@400;500;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&family=Poppins:wght@400;500;600&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -118,4 +118,4 @@ input[type="submit"]:hover {
 }
 .carousel-indicators {
   margin-bottom: 12.5vw;
-} */
+}
