--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ html {
 #logo-name {
   display: flex;
   width: 100%;
-  font-size: 1.25rem;
+  font-size: 1rem;
   margin-left: 1rem;
   flex-direction: column;
   letter-spacing: 1px;
@@ -27,8 +27,10 @@ html {
   align-items: center;
 }
 #nav-lms {
+  display: flex;
   position: sticky;
   justify-content: space-between;
+  align-items: center;
   width: 100%;
   height: 132px;
   margin: 0px 0px;
@@ -44,7 +46,7 @@ html {
 
 #nav-lms a {
   font-size: 1.75em;
-  padding: 45px;
+  padding: 50px;
   margin: 0px;
   text-decoration: none;
   color: black;
@@ -82,7 +84,7 @@ body {
 }
 .header-name {
   letter-spacing: 2px;
-  font-size: 3.5rem;
+  font-size: 5rem;
   font-weight: 650;
   color: white;
   margin: 0;
@@ -172,14 +174,34 @@ body {
   background-color: rgb(19, 115, 163);
   border-radius: 15px;
 }
+
+#main {
+  display: flex;
+  flex-direction: column;
+  box-sizing: inherit;
+  position: relative;
+  width: 85%;
+  height: 40vw;
+  margin: -35px auto auto;
+  padding: 3vw 0 1vw 0;
+  background-color: rgb(228, 228, 228);
+  justify-content: center;
+  align-items: center;
+}
+.paragraph {
+  text-align: justify;
+  padding: 50px 175px 50px 175px;
+}
+
 #footer-lms {
   background-color: rgb(88, 88, 88);
-  width: 100%;
+  width: auto;
   height: 10vw;
   margin-top: 10rem;
   padding: 1.5rem;
   text-align: justify;
 }
+
 #footer-lms-container {
   display: flex;
   flex-direction: row;
@@ -200,4 +222,12 @@ body {
 }
 #contact-email {
   font-size: 1.25rem;
+}
+
+#temp-carousel {
+  background-color: rgb(109, 109, 109);
+  width: auto;
+  display: flex;
+  width: 100%;
+  height: 25vw;
 }
