--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -88,7 +88,7 @@ body {
   background-color: rgb(88, 88, 88);
   width: auto;
   height: 10vw;
-  margin-top: 10rem;
+  margin-top: 0px;
   padding: 1.5rem;
   text-align: justify;
 }
