--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -1,6 +1,11 @@
 html {
   font-family: Helvetica, sans-serif;
 }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 #nav-lms,
 #nav-links,
 #logo-img {
@@ -104,4 +109,51 @@ body {
   width: 40%;
   font-size: 1.1em;
   bottom: 10px;
+}
+.search-container, .content{
+  width: 100%;
+  margin-left: 15vw;
+}
+.span9, .wrapper, .span3 {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 100%;
+}
+
+.issue-return-container a {
+  text-decoration: none;
+}
+.issue-return-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 10vw;
+  margin-left: 15vw;
+  margin-top: 10vw;
+}
+.module-head {
+  margin-top: 2.5vw;
+}
+.issue-request-btns {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 10vw;
+  margin: 10vw 15vw 5vw 15vw;
+}
+#renew-request-container{
+  margin-left: 15vw;
+}
+#issue-request-table, #renew-request-table, #return-request-table {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin-left: 15vw;
 }
